--- a/src/package.json
+++ b/src/package.json
@@ -15,13 +15,17 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "nodemon": "^2.0.4",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
