--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
       python:
       - - "3.8"
       before_script:
-        - cd src/backend
+        - cd src/processing
         - pip install -r requirements.txt
       script:
         - python -m unittest discover
