--- a/src/processing/requirements.txt
+++ b/src/processing/requirements.txt
@@ -1,19 +1,14 @@
-astroid==2.4.2
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
-isort==5.5.4
-lazy-object-proxy==1.4.3
 mccabe==0.6.1
+mongoengine==0.20.0
 pycodestyle==2.6.0
 pydocstyle==5.1.1
 pyflakes==2.2.0
 pylama==7.7.1
-pylint==2.6.0
+pymongo==3.11.0
 python-dotenv==0.14.0
 requests==2.24.0
-six==1.15.0
 snowballstemmer==2.0.0
-toml==0.10.1
-urllib3==1.25.10
-wrapt==1.12.1
+urllib3==1.25.11
