Added database.py, includes some database models for processing data

--- a/src/processing/.env.example
+++ b/src/processing/.env.example
@@ -1,3 +1,5 @@
 BADPACKETS_API_TOKEN="<your_api_token_here>"
 BADPACKETS_API_URL = https://api.badpackets.net/v1/
 BADPACKETS_SEEN_AFTER_DAYS = 7
+
+MONGODB_URL = mongodb+srv://<username>:<password>@<host>/<database>?retryWrites=true&w=majority
