--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ matrix:
         - pip install -r requirements.txt
       script:
         - python -m unittest discover
-        - python -m pylama badpackets
+        - python -m pylama
