--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "eslint": "^7.10.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "mongoose": "^5.10.10",
     "nodemon": "^2.0.4",
     "nuxt": "^2.14.6",
     "vue2-google-maps": "^0.10.7"
