--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
     "express": "^4.17.1",
