--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.linting.enabled": true,
     "python.pythonPath": "src/backend/venv/bin/python",
-    "python.linting.pylamaEnabled": true
+    "python.linting.pylamaEnabled": true,
 }
