--- a/src/package.json
+++ b/src/package.json
@@ -10,8 +10,8 @@
     "exp-start": "node backend/server.js",
     "exp-dev": "nodemon backend/server.js",
     "test": "jest",
-    "eslint": "eslint src --ext .js,.vue --ignore-path .gitignore .",
-    "eslintfix": "eslint src --fix --ext .js,.vue --ignore-path .gitignore ."
+    "eslint": "eslint frontend backend --ext .js,.vue --ignore-path .gitignore .",
+    "eslintfix": "eslint frontend backend --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
@@ -22,7 +22,6 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint": "^7.10.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongoose": "^5.10.10",
@@ -36,8 +35,15 @@
     "@nuxt/typescript-build": "^2.0.3",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.0",
+    "eslint": "^7.12.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-vue": "^7.1.0",
     "jest": "^26.5.0",
+    "prettier": "^2.1.2",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4"
   }
