--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
-jobs:
+branches:
+  only:
+    - master
+
+matrix:
   include:
-    - stage: test
     - language: python
-      python:
-      - - "3.8"
-      before_script:
-        - cd src/processing
-        - pip install -r requirements.txt
-      script:
-        - python -m unittest discover
-        - python -m pylama
-    - language: node_js
-      before_script:
-        - cd src
-        - npm install
-      script:
-        - npm run eslint
+      python: 3.9
+      - stage: testing
+        before_script:
+          - cd src/processing
+          - pip install -r requirements.txt
+        script:
+          - python -m unittest discover
+          - python -m pylama
