Travis.yml jobs with node_js version 14

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
-matrix:
+jobs:
   include:
     - language: python
       python: 3.9
-      - stage: testing
-        before_script:
-          - cd src/processing
-          - pip install -r requirements.txt
-        script:
-          - python -m unittest discover
-          - python -m pylama
+      before_script:
+        - cd src/processing
+        - pip install -r requirements.txt
+      script:
+        - python -m unittest discover
+        - python -m pylama
     - language: node_js
-      - stage: testing
-        before_script:
-          - cd src
-          - npm install
-        script:
-          - npm run eslint
+      node_js: 14
+      before_script:
+        - cd src
+        - npm install
+      script:
+        - npm run eslint
