--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
+language: node_js
+node_js: 14
+
+cache:
+  bundler: true
+  directories:
+  - src/node_modules
+
 jobs:
   include:
-    - language: python
-      python: 3.8
-      before_script:
-        - cd src/processing
-        - pip install -r requirements.txt
-      script:
-        - python -m unittest discover
-        - python -m pylama
-    - language: node_js
-      node_js: 14
-      before_script:
+    - stage: linting
+      install:
         - cd src
         - npm install
+        - cd processing
+        - pip install -r requirements
       script:
+        - cd src
         - npm run eslint
+        - cd processing
+        - python -m pylama
+    - stage: testing
+      script:
+        - python -m unittest discover
