--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.10.10",
     "nodemon": "^2.0.4",
     "nuxt": "^2.14.6",
+    "nuxt-highlightjs": "^1.0.1",
     "nuxt-leaflet": "0.0.22",
     "vue2-leaflet-markercluster": "^3.1.0"
   },
