--- a/src/package.json
+++ b/src/package.json
@@ -43,8 +43,11 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.1.0",
+    "fibers": "^5.0.0",
     "jest": "^26.5.0",
     "prettier": "^2.1.2",
+    "sass": "^1.27.2",
+    "sass-loader": "^10.0.4",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4"
   }
