--- a/src/processing/static_analysis/requirements.txt
+++ b/src/processing/static_analysis/requirements.txt
@@ -1,7 +1,9 @@
+backports.functools-lru-cache==1.6.1
 binaryornot==0.4.4
 certifi==2020.6.20
 chardet==3.0.4
 cxxfilt==0.2.1
+decorator==4.4.2
 enum34==1.1.10
 floss @ https://github.com/fireeye/flare-floss/zipball/master
 funcy==1.15
@@ -17,9 +19,15 @@ pycparser==2.20
 PyYAML==5.3.1
 q==2.6
 requests==2.24.0
+requests-file==1.5.1
 simplejson==3.17.2
+six==1.15.0
 sortedcontainers==2.2.2
 tabulate==0.8.7
+tld==0.12.2
+tldextract==2.2.3
+typing==3.7.4.3
 urllib3==1.25.11
+validators==0.14.2
 viv-utils==0.3.17
 vivisect @ https://github.com/williballenthin/vivisect/zipball/master
