Implemented vuex store for global site settings

--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/device": "^1.2.7",
     "@nuxtjs/dotenv": "^1.4.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.2",
