Added i18n language selection to frontend

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -26,7 +26,8 @@
     "types": [
       "@types/node",
       "@nuxt/types",
-      "nuxt-leaflet"
+      "nuxt-leaflet",
+      "nuxt-i18n",
     ]
   },
   "exclude": [
