--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^2.0.4",
     "nuxt": "^2.14.6",
     "nuxt-highlightjs": "^1.0.1",
+    "nuxt-i18n": "^6.15.4",
     "nuxt-leaflet": "0.0.22",
     "vue-flag-icon": "^1.0.6",
     "vue2-leaflet-markercluster": "^3.1.0"
